Ingress/ingress-admin-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-adminapi-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
    - host: admin.nikan.com
      http: 
          paths:           
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identityadmin-clusterip-srv
                port:
                  number: 80
    - host: adminapi.nikan.com
      http:
          paths:  
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identityadminapi-clusterip-srv
                port:
                  number: 80
