Ingress/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
    - host: basicdata.nikan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: basicdata-clusterip-srv
                port:
                  number: 80
